Update link to the presentation

--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@ GROUP	1	gr1	startTime2	endTime2	cumulated	OK
             <h2>Группировка запросов</h2>
             <h2>Лимит ожидания</h2>
             <h2><a href="https://github.com/nuxeo/gatling-report">gatling-report</a></h2>
-        <p>презентация: <a href="http://bit.ly/hb-gatling-2019">bit.ly/hb-gatling-2019</a></p>
+        <p>презентация: <a href="http://bit.ly/async-gatling">bit.ly/async-gatling</a></p>
 
         <style>
             #resume h2 {
